--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@ layout: default
 title: Hypothes.is Project
 ---
 {% assign posts = site.posts %}
-<div id="home">
-  <h1>Hypothes.is</h1>
-  {% include posts_list.html %}
+
+<div class ="container">
+  <h1>{{ page.title }}</h1>
+  <div class="recent-posts">
+    <h1>Recent Posts</h1>
+    <div class="homepage-posts most-recent">
+      {% include posts_list.html %}
+    </div>
+  </div>
 </div>
